--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
                 <p>Durante o final da Segunda Guerra Mundial, o sargento Don Wardaddy lidera um grupo de apenas cinco soldados norte-americanos
                      encarregado de aniquilar os nazistas. Em um tanque de guerra Sherman, os homens enfrentam uma missão mortal. Apesar da desvantagem numérica,
                       falta de armas e um soldado inexperiente, Wardaddy e seus homens se movimentam em um ataque espetacular no coração da Alemanha nazista.
-                    </p>
+                    </p><iframe width="560" height="315" src="https://www.youtube.com/embed/J8OrqTsVMP0?si=d2bEGV35CzLz_bcX" 
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+                     gyroscope; picture-in-picture;
+                     web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
     
             <div>
