--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
     
             <div>
-                <iframe width=
+                <iframe 
             </div>
         </section>
     
